--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,3 +44,17 @@ body {
   font-size: 100%;
 }
 
+.side-crop {
+    width: 100%;
+    height: 149px;
+    overflow-y: hidden;
+    position: relative;
+}
+
+.side-crop img {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 40%;
+    transform: translateX(-40%);
+}
